--- a/versions-manifest.json
+++ b/versions-manifest.json
@@ -1,5 +1,36 @@
 [
   {
+    "version": "0.13.2",
+    "stable": true,
+    "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.13.2",
+    "files": [
+      {
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "arch": "x86",
+        "platform": "win32",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.2/maturin-i686-pc-windows-msvc.zip"
+      },
+      {
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "arch": "x64",
+        "platform": "darwin",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.2/maturin-x86_64-apple-darwin.tar.gz"
+      },
+      {
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "arch": "x64",
+        "platform": "win32",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.2/maturin-x86_64-pc-windows-msvc.zip"
+      },
+      {
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "arch": "x64",
+        "platform": "linux",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.2/maturin-x86_64-unknown-linux-musl.tar.gz"
+      }
+    ]
+  },
+  {
     "version": "0.13.2-beta.5",
     "stable": false,
     "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.13.2-beta.5",
@@ -1530,6 +1561,12 @@
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.10-beta.2/maturin-i686-pc-windows-msvc.zip"
       },
       {
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "arch": "x64",
+        "platform": "linux",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.10-beta.2/maturin-x86_64-unknown-linux-musl.tar.gz"
+      },
+      {
         "filename": "maturin-x86_64-apple-darwin.tar.gz",
         "arch": "x64",
         "platform": "darwin",
@@ -1540,12 +1577,6 @@
         "arch": "x64",
         "platform": "win32",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.10-beta.2/maturin-x86_64-pc-windows-msvc.zip"
-      },
-      {
-        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
-        "arch": "x64",
-        "platform": "linux",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.10-beta.2/maturin-x86_64-unknown-linux-musl.tar.gz"
       }
     ]
   },
@@ -3049,16 +3080,16 @@
     "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.11.3-beta.7",
     "files": [
       {
-        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
-        "arch": "x64",
-        "platform": "linux",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.7/maturin-x86_64-unknown-linux-musl.tar.gz"
-      },
-      {
         "filename": "maturin-i686-pc-windows-msvc.zip",
         "arch": "x86",
         "platform": "win32",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.7/maturin-i686-pc-windows-msvc.zip"
+      },
+      {
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "arch": "x64",
+        "platform": "darwin",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.7/maturin-x86_64-apple-darwin.tar.gz"
       },
       {
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
@@ -3067,10 +3098,10 @@
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.7/maturin-x86_64-pc-windows-msvc.zip"
       },
       {
-        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
         "arch": "x64",
-        "platform": "darwin",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.7/maturin-x86_64-apple-darwin.tar.gz"
+        "platform": "linux",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.7/maturin-x86_64-unknown-linux-musl.tar.gz"
       }
     ]
   },
