--- a/versions-manifest.json
+++ b/versions-manifest.json
@@ -3,6 +3,37 @@
     "files": [
       {
         "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.3/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.3/maturin-x86_64-apple-darwin.tar.gz",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "platform": "darwin"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.3/maturin-x86_64-pc-windows-msvc.zip",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.3/maturin-x86_64-unknown-linux-musl.tar.gz",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "platform": "linux"
+      }
+    ],
+    "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.13.3-beta.3",
+    "stable": false,
+    "version": "0.13.3-beta.3"
+  },
+  {
+    "files": [
+      {
+        "arch": "x86",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.2/maturin-i686-pc-windows-msvc.zip",
         "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
@@ -1521,12 +1552,6 @@
   {
     "files": [
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.10-beta.5/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.10-beta.5/maturin-x86_64-apple-darwin.tar.gz",
         "filename": "maturin-x86_64-apple-darwin.tar.gz",
@@ -1536,6 +1561,12 @@
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.10-beta.5/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.10-beta.5/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       },
       {
@@ -3046,16 +3077,16 @@
   {
     "files": [
       {
-        "arch": "x64",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.4-beta.2/maturin-x86_64-unknown-linux-musl.tar.gz",
-        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
-        "platform": "linux"
-      },
-      {
         "arch": "x86",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.4-beta.2/maturin-i686-pc-windows-msvc.zip",
         "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.4-beta.2/maturin-x86_64-apple-darwin.tar.gz",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "platform": "darwin"
       },
       {
         "arch": "x64",
@@ -3065,9 +3096,9 @@
       },
       {
         "arch": "x64",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.4-beta.2/maturin-x86_64-apple-darwin.tar.gz",
-        "filename": "maturin-x86_64-apple-darwin.tar.gz",
-        "platform": "darwin"
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.4-beta.2/maturin-x86_64-unknown-linux-musl.tar.gz",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "platform": "linux"
       }
     ],
     "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.11.4-beta.2",
