--- a/versions-manifest.json
+++ b/versions-manifest.json
@@ -3,6 +3,130 @@
     "files": [
       {
         "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3/maturin-x86_64-apple-darwin.tar.gz",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "platform": "darwin"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3/maturin-x86_64-unknown-linux-musl.tar.gz",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "platform": "linux"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3/maturin-x86_64-pc-windows-msvc.zip",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      }
+    ],
+    "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.13.3",
+    "stable": true,
+    "version": "0.13.3"
+  },
+  {
+    "files": [
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.8/maturin-x86_64-apple-darwin.tar.gz",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "platform": "darwin"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.8/maturin-x86_64-unknown-linux-musl.tar.gz",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "platform": "linux"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.8/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.8/maturin-x86_64-pc-windows-msvc.zip",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      }
+    ],
+    "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.13.3-beta.8",
+    "stable": false,
+    "version": "0.13.3-beta.8"
+  },
+  {
+    "files": [
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.7/maturin-x86_64-apple-darwin.tar.gz",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "platform": "darwin"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.7/maturin-x86_64-unknown-linux-musl.tar.gz",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "platform": "linux"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.7/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.7/maturin-x86_64-pc-windows-msvc.zip",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      }
+    ],
+    "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.13.3-beta.7",
+    "stable": false,
+    "version": "0.13.3-beta.7"
+  },
+  {
+    "files": [
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.6/maturin-x86_64-apple-darwin.tar.gz",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "platform": "darwin"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.6/maturin-x86_64-unknown-linux-musl.tar.gz",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "platform": "linux"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.6/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.6/maturin-x86_64-pc-windows-msvc.zip",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      }
+    ],
+    "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.13.3-beta.6",
+    "stable": false,
+    "version": "0.13.3-beta.6"
+  },
+  {
+    "files": [
+      {
+        "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.13.3-beta.4/maturin-x86_64-apple-darwin.tar.gz",
         "filename": "maturin-x86_64-apple-darwin.tar.gz",
         "platform": "darwin"
@@ -3089,15 +3213,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.4-beta.3/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.4-beta.3/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.4-beta.3/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -3182,15 +3306,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -3275,15 +3399,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.5/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.5/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.5/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -3399,15 +3523,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.1/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.1/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.3-beta.1/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -3492,15 +3616,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -3554,15 +3678,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0-beta.4/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0-beta.4/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.11.0-beta.4/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -3771,15 +3895,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.5-beta.5/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.5-beta.5/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.5-beta.5/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -3864,15 +3988,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.5-beta.2/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.5-beta.2/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.5-beta.2/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -3895,15 +4019,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.5-beta.1/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.5-beta.1/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.5-beta.1/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -3926,15 +4050,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.4-beta.2/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.4-beta.2/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.4-beta.2/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -4087,15 +4211,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -4149,15 +4273,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.5/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.5/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.5/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -4180,15 +4304,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.4/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.4/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.4/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -4211,15 +4335,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.3/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.3/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.3/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -4242,15 +4366,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.2/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.2/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.2/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -4273,15 +4397,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.1/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.1/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.1/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -4329,15 +4453,15 @@
         "platform": "darwin"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.9.3/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.9.3/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.9.3/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
