--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,16 +86,19 @@ jobs:
           args: -m maturin/test-crates/hello-world/Cargo.toml
           manylinux: 'auto'
           target: 'powerpc64le-unknown-linux-musl'
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
       - name: maturin build manylinux off
         uses: ./
         with:
-          args: -m maturin/test-crates/pyo3-mixed/Cargo.toml -i python3.10
+          args: -m maturin/test-crates/pyo3-mixed/Cargo.toml -i python3.11
           manylinux: 'off'
       - name: maturin build container off
         uses: ./
         with:
           rustup-components: rustfmt
-          args: -m maturin/test-crates/pyo3-mixed/Cargo.toml -i python3.10
+          args: -m maturin/test-crates/pyo3-mixed/Cargo.toml -i python3.11
           manylinux: 'off'
           container: 'off'
       - name: maturin build container manylinux version
