--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/messense/maturin-action.git"
+    "url": "git+https://github.com/PyO3/maturin-action.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/messense/maturin-action/issues"
+    "url": "https://github.com/PyO3/maturin-action/issues"
   },
-  "homepage": "https://github.com/messense/maturin-action#readme",
+  "homepage": "https://github.com/PyO3/maturin-action#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
