--- a/action.yml
+++ b/action.yml
@@ -36,6 +36,9 @@ inputs:
       Rustup components.
       See https://rust-lang.github.io/rustup/concepts/components.html
     required: false
+  working-directory:
+    description: Working directory to run maturin in.
+    required: false
 
 runs:
   using: 'node16'
